--- a/ShoppingCartWeb/Views/Registration/UpdateRegistration.cshtml
+++ b/ShoppingCartWeb/Views/Registration/UpdateRegistration.cshtml
@@ -10,6 +10,7 @@
         <hr />
 
         <input hidden asp-for="Registration.RegistrationId" />
+        <input hidden asp-for="CurrentPage" />
 
         <div class="row">
             <div class="col-md-6">
