--- a/ShoppingCartWeb/Views/CategoryMaster/IndexCategoryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CategoryMaster/IndexCategoryMaster.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ShoppingCartWeb.Models.Dto.CategoryMasterDTO>
+﻿@model ShoppingCartWeb.Models.VM.CategoryMasterPaginationVM
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,22 +6,32 @@
 
 <br />
 <div class="row pb-2">
+
     <div class="col">
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
+
         <h1 class="text-dark">Categories</h1>
     </div>
-    <div class="col-2 text-start pt-1 justify-content-start">
+
+    <div class="col-2 d-flex justify-content-end align-items-start">
         <a asp-controller="CategoryMaster" asp-action="CreateCategoryMaster" class="btn btn-primary btn-sm ms-2">
             <div class="d-flex align-items-center">
 
-                <span class="d-inline-block align-middle" style="font-size: 24px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
+                <span class="d-inline-block align-middle" style="font-size: 17px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
 
             </div>
         </a>
     </div>
 </div>
 
+<br />
 
-<div class="container p-4 border mt-4">
+<div>
 
 
     <div class="table-responsive">
@@ -32,76 +42,130 @@
                         Category Name
                     </th>
 
-                    <th></th>
+                    <th>
+                        Action
+
+                    </th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model)
+                @foreach (var item in Model.CategoryMasterDTO)
                 {
-                    <tr>
-                        <td style="white-space: nowrap;">@item.CategoryName</td>
-                        <td>
+                    if (@item.IsDeleted == false)
+                    {
+                        <tr>
+                            <td style="white-space: nowrap;">@item.CategoryName</td>
+                            <td>
 
-                            <div class="btn-group" role="group">
-@*
-                                <a asp-controller="CategoryMaster" data-category-id="@item.CategoryId" data-toggle="modal" data-target="#categoryModal_@item.CategoryId" asp-action="ViewCategoryMaster" asp-route-categoryId="@item.CategoryId" class="btn btn-warning"><i class="bi bi-view-list"></i></a>
+                                <div class="btn-group" role="group">
 
-*@
-                                <a asp-controller="CategoryMaster" asp-action="UpdateCategoryMaster" asp-route-categoryId="@item.CategoryId" class="btn btn-success ml-2"><i class="bi bi-pencil-square"></i></a>
+                                    <a asp-controller="CategoryMaster" asp-action="UpdateCategoryMaster" asp-route-categoryId="@item.CategoryId" class="btn btn-sm ml-1">
+                                        <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
+                                    </a>
+
+                                    <a href="#" class="btn btn-sm ml-1" data-toggle="modal" data-target="#deleteModal_@item.CategoryId">
+                                        <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
 
 
-                                <a href="#" class="btn btn-danger ml-2" data-toggle="modal" data-target="#deleteModal_@item.CategoryId"><i class="bi bi-trash-fill"></i>  </a>
+                        <!-- Delete Confirmation Modal for each item -->
+                        <div class="modal fade" id="deleteModal_@item.CategoryId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Are you sure you want to delete this item?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                        <a asp-controller="CategoryMaster" asp-action="RemoveCategoryMaster" asp-route-categoryId="@item.CategoryId" class="btn btn-danger">Delete</a>
+                                    </div>
+                                </div>
                             </div>
-                        </td>
-                    </tr>
+                        </div>
+                    }
+                    else
+                    {
+                        <tr>
+                            <td style="white-space: nowrap;">@item.CategoryName</td>
+                            <td>
 
+                                <div class="btn-group" role="group">
 
-                    <!-- Delete Confirmation Modal for each item -->
-                    <div class="modal fade" id="deleteModal_@item.CategoryId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                                    <a href="#" class="btn btn-primary btn-sm ml-2" data-toggle="modal" data-target="#enableModal_@item.CategoryId"> Active </a>
+
+                                </div>
+                            </td>
+                        </tr>
+                    }
+
+                    <!-- Enable Confirmation Modal for each item -->
+                    <div class="modal fade" id="enableModal_@item.CategoryId" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                    <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    Are you sure you want to delete this item?
+                                    Are you sure you want to Enable this item?
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                    <a asp-controller="CategoryMaster" asp-action="RemoveCategoryMaster" asp-route-categoryId="@item.CategoryId" class="btn btn-danger">Delete</a>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                    <a asp-controller="CategoryMaster" asp-action="EnableCategory" asp-route-categoryId="@item.CategoryId" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 }
-
-               @* @foreach (var item in Model)
-                {
-                    <div class="modal fade" id="categoryModal_@item.CategoryId" tabindex="-1" role="dialog" aria-labelledby="categoryModalLabel_@item.CategoryId">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="categoryModalLabel_@item.CategoryId">Category Details</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <p><strong>Category:</strong> @item.CategoryName</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }*@
 
             </tbody>
         </table>
 
     </div>
+
+    <nav aria-label="Page navigation example" class="justify-content-end">
+        <ul class="pagination">
+            @if (Model.CurrentPage > 1)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@(Model.CurrentPage-1)" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            }
+
+            @for (int i = 1; i <= Model.TotalPages; i++)
+            {
+                if (i == Model.CurrentPage)
+                {
+                    <li class="page-item"><a class="page-link active" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+
+                }
+                else
+                {
+                    <li class="page-item"><a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                }
+            }
+            @if (Model.CurrentPage < Model.TotalPages)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="/CategoryMaster/IndexCategoryMaster?orderBy=@Model.OrderBy&currentPage=@Model.CurrentPage+1" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            }
+        </ul>
+    </nav>
 </div>
