--- a/ShoppingCartWeb/Views/CategoryMaster/UpdateCategoryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CategoryMaster/UpdateCategoryMaster.cshtml
@@ -6,7 +6,7 @@
 <br />
 <form asp-action="UpdateCategoryMaster">
     <div class="container border p-3">
-        <h1 class="text-dark">Edit Category</h1>
+        <h1 class="text-dark">Category</h1>
         <hr />
 
         <input hidden asp-for="CategoryId" />
@@ -14,7 +14,7 @@
             <div class="col-md-6">
                 <div class="row pb-3">
                     <div class="col-2">
-                        <label asp-for="CategoryName" class="control-label pt-2" style="font-size:20px;">Category</label>
+                        <label asp-for="CategoryName" class="control-label pt-2" style="font-size:17px;">Category</label>
                     </div>
                     <div class="col-md-7 pb-4">
                         <input asp-for="CategoryName" class="form-control" />
@@ -22,10 +22,10 @@
                     </div>
 
 
-                    <div class="col-3 offset-3">
+                    <div class="col-2 offset-5">
                         <a asp-action="IndexCategoryMaster" asp-controller="CategoryMaster" class="btn-primary btn form-control ">Cancel</a>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <input type="submit" value="Update" class="btn btn-success form-control" />
                     </div>
                 </div>
