--- a/ShoppingCartWeb/Views/CountryMaster/UpdateCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/UpdateCountryMaster.cshtml
@@ -7,7 +7,7 @@
 <form asp-action="UpdateCountryMaster">
 
     <div class="container border p-3">
-        <h1 class="text-dark">Edit Country</h1>
+        <h1 class="text-dark">Country</h1>
         <hr />
 
         <input hidden asp-for="CountryId" />
@@ -15,7 +15,7 @@
             <div class="col-md-6">
                 <div class="row pb-3">
                     <div class="col-2">
-                        <label asp-for="CountryName" class="control-label pt-2" style="font-size:20px;"> Country</label>
+                        <label asp-for="CountryName" class="control-label pt-2" style="font-size:17px;"> Country</label>
                     </div>
                     <div class="col-md-7 pb-4">
                         <input asp-for="CountryName" class="form-control" />
@@ -23,10 +23,10 @@
                     </div>
 
 
-                    <div class="col-3 offset-3">
+                    <div class="col-2 offset-5">
                         <a asp-action="IndexCountryMaster" asp-controller="CountryMaster" class="btn-primary btn form-control ">Cancel</a>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <input type="submit" value="Update" class="btn btn-success form-control" />
                     </div>
                 </div>
