--- a/ShoppingCartWeb/Views/RoleMaster/IndexRoleMaster.cshtml
+++ b/ShoppingCartWeb/Views/RoleMaster/IndexRoleMaster.cshtml
@@ -5,21 +5,31 @@
 }
 <br />
 <div class="row pb-2">
+
     <div class="col">
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
         <h1 class="text-dark">Roles</h1>
     </div>
-    <div class="col-2 text-start pt-1 justify-content-start">
-        <a asp-controller="RoleMaster" asp-action="CreateRoleMaster" class="btn btn-primary btn-sm ms-2">
+
+    <div class="col-2 d-flex justify-content-end align-items-start">
+        <a asp-controller="RoleMaster" asp-action="CreateRoleMaster" class="btn btn-primary btn-sm">
             <div class="d-flex align-items-center">
-
-                <span class="d-inline-block align-middle" style="font-size: 24px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
-
+                <span class="d-inline-block align-middle" style="font-size: 17px;"><i class="bi bi-plus-square-fill"></i> Create</span>
             </div>
         </a>
     </div>
 
 </div>
-<div class="container p-4 border mt-4">
+
+
+<br />
+
+<div>
 
 
     <div class="table-responsive">
@@ -30,7 +40,9 @@
                         Role Name
                     </th>
 
-                    <th></th>
+                    <th>
+                        Action
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -40,8 +52,14 @@
                         <td>@item.RoleName</td>
                         <td style="white-space: nowrap;">
                             <div class="btn-group" role="group">
-                                <a asp-controller="RoleMaster" asp-action="UpdateRoleMaster" asp-route-roleId="@item.RoleId" class="btn btn-success"><i class="bi bi-pencil-square"></i>  </a>
-                                <a href="#" class="btn btn-danger ml-2" data-toggle="modal" data-target="#deleteModal_@item.RoleId"><i class="bi bi-trash-fill"></i>  </a>
+
+                                <a asp-controller="RoleMaster" asp-action="UpdateRoleMaster" asp-route-roleId="@item.RoleId" class="btn btn-sm ml-2">
+                                    <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
+                                    </a>
+
+                                <a href="#" class="btn btn-sm ml-2" data-toggle="modal" data-target="#deleteModal_@item.RoleId">
+                                    <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span>
+                                    </a>
                             </div>
                         </td>
                     </tr>
