--- a/ShoppingCartWeb/Views/StateMaster/IndexStateMaster.cshtml
+++ b/ShoppingCartWeb/Views/StateMaster/IndexStateMaster.cshtml
@@ -9,21 +9,30 @@
 <br />
 <div class="row pb-2">
     <div class="col">
+        <style>
+            .text-dark {
+                font-size: 24px; /* You can adjust the size to your preference, e.g., 24px, 36px, etc. */
+                /* You can also use other units like em, rem, or % if you prefer. */
+            }
+        </style>
+
         <h1 class="text-dark">States</h1>
     </div>
+    <div class="col-2 d-flex justify-content-end align-items-start">
 
-    <div class="col-2 text-start pt-1 justify-content-start">
         <a asp-controller="StateMaster" asp-action="CreateStateMaster" class="btn btn-primary btn-sm ms-2">
             <div class="d-flex align-items-center">
 
-                <span class="d-inline-block align-middle" style="font-size: 24px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
+                <span class="d-inline-block align-middle" style="font-size: 17px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
 
             </div>
         </a>
     </div>
 </div>
 
-<div class="container p-4 border mt-4">
+<br />
+
+<div>
 
     <div class="table-responsive">
         <table class="table table-bordered">
@@ -35,10 +44,13 @@
                     <th>
                         Country Name
                     </th>
-                    <th></th>
+                    <th>
+                        Action
+                    </th>
                 </tr>
             </thead>
             <tbody>
+
                 @foreach (var item in Model)
                 {
                     <tr>
@@ -48,8 +60,10 @@
                         <td>
 
                             <div class="btn-group" role="group">
-                                <a asp-controller="StateMaster" asp-action="UpdateStateMaster" asp-route-stateId="@item.StateId" class="btn btn-success button-spacing"><i class="bi bi-pencil-square"></i></a>
-                                <a href="#" class="btn btn-danger ml-2" data-toggle="modal" data-target="#deleteModal_@item.StateId"><i class="bi bi-trash-fill"></i>  </a>
+                                <a asp-controller="StateMaster" asp-action="UpdateStateMaster" asp-route-stateId="@item.StateId" class=" button-spacing btn ml-1 text-success" style="font:bold">
+                                    <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
+                                </a>
+                                <a href="#" class="btn ml-1 text-danger" style=" font:bold " data-toggle="modal" data-target="#deleteModal_@item.StateId"> <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span> </a>
                             </div>
                         </td>
                     </tr>
@@ -94,8 +108,8 @@
                         cancelButtonText: 'Cancel'
                     }).then((result) => {
                         if (result.isConfirmed) {
-                            alert(registerstateId); 
-                            .ajax({
+                            alert(registerstateId);
+                                        .ajax({
                                 type: "POST",
                                 url: '@Url.Action("RemoveStateMaster", "StateMaster")',
                                 data: { stateId: $(this).data("stateId") },
