--- a/ShoppingCartWeb/Views/CategoryMaster/IndexCategoryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CategoryMaster/IndexCategoryMaster.cshtml
@@ -51,10 +51,14 @@
             <tbody>
                 @foreach (var item in Model.CategoryMasterDTO)
                 {
-                    if (@item.IsDeleted == false)
-                    {
-                        <tr>
-                            <td style="white-space: nowrap;">@item.CategoryName</td>
+
+                    <tr>
+                        <td style="white-space: nowrap;">
+                            @item.CategoryName
+                        </td>
+
+                        @if (item.IsDeleted == false)
+                        {
                             <td>
 
                                 <div class="btn-group" role="group">
@@ -66,46 +70,42 @@
                                     <a href="#" class="btn btn-sm ml-1" data-toggle="modal" data-target="#deleteModal_@item.CategoryId">
                                         <span id="boot-icon" class="bi bi-trash-fill" style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;"></span>
                                     </a>
+
                                 </div>
                             </td>
-                        </tr>
+                        }
+                        else
+                        {
+                            <td>
+                                <div class="btn-group" role="group">
+                                    <a href="#" class="btn btn-primary btn-sm ml-2" data-toggle="modal" data-target="#enableModal_@item.CategoryId"> Active </a>
+                                </div>
+                            </td>
+                        }
+
+                    </tr>
 
 
-                        <!-- Delete Confirmation Modal for each item -->
-                        <div class="modal fade" id="deleteModal_@item.CategoryId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Are you sure you want to delete this item?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                        <a asp-controller="CategoryMaster" asp-action="RemoveCategoryMaster" asp-route-categoryId="@item.CategoryId" class="btn btn-danger">Delete</a>
-                                    </div>
+                    <!-- Delete Confirmation Modal for each item -->
+                    <div class="modal fade" id="deleteModal_@item.CategoryId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete this item?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <a asp-controller="CategoryMaster" asp-action="RemoveCategoryMaster" asp-route-categoryId="@item.CategoryId" class="btn btn-danger">Delete</a>
                                 </div>
                             </div>
                         </div>
-                    }
-                    else
-                    {
-                        <tr>
-                            <td style="white-space: nowrap;">@item.CategoryName</td>
-                            <td>
-
-                                <div class="btn-group" role="group">
-
-                                    <a href="#" class="btn btn-primary btn-sm ml-2" data-toggle="modal" data-target="#enableModal_@item.CategoryId"> Active </a>
-
-                                </div>
-                            </td>
-                        </tr>
-                    }
+                    </div>
 
                     <!-- Enable Confirmation Modal for each item -->
                     <div class="modal fade" id="enableModal_@item.CategoryId" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
