--- a/ShoppingCartWeb/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartWeb/Views/Shared/_Layout.cshtml
@@ -16,8 +16,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
-    
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.6.0/jq-3.6.0/dt-1.13.1/b-2.3.3/fc-4.2.1/sc-2.0.7/sb-1.4.0/sp-2.1.0/sl-1.5.0/datatables.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
@@ -47,10 +45,11 @@
             <!-- Left navbar links -->
 
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-                </li>
+                </li>*@
                 <li class="nav-item d-none d-sm-inline-block">
+
                     @if (httpAcc.HttpContext.Session.GetString(SD.SessionToken) != null &&
                     httpAcc.HttpContext.Session.GetString(SD.SessionToken).ToString().Length > 0)
                     {
@@ -109,24 +108,39 @@
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
-
                                 <li class="nav-item">
-                                    <a class="nav-link " asp-controller="RoleMaster" asp-action="IndexRoleMaster">Role Master</a>
+                                    <a class="nav-link @(currentController == "RoleMaster" && currentAction == "IndexRoleMaster" ? "active" : "")" asp-controller="RoleMaster" asp-action="IndexRoleMaster">Role Master</a>
                                 </li>
-
                                 <li class="nav-item">
-                                    <a class="nav-link " asp-controller="CategoryMaster" asp-action="IndexCategoryMaster">Category Master</a>
+                                    <a class="nav-link @(currentController == "CategoryMaster" && currentAction == "IndexCategoryMaster" ? "active" : "")" asp-controller="CategoryMaster" asp-action="IndexCategoryMaster">Category Master</a>
                                 </li>
-
                                 <li class="nav-item">
-                                    <a class="nav-link " asp-controller="CountryMaster" asp-action="IndexCountryMaster">Country Master</a>
+                                    <a class="nav-link @(currentController == "CountryMaster" && currentAction == "IndexCountryMaster" ? "active" : "")" asp-controller="CountryMaster" asp-action="IndexCountryMaster">Country Master</a>
                                 </li>
-
                                 <li class="nav-item">
-                                    <a class="nav-link " asp-controller="StateMaster" asp-action="IndexStateMaster">State Master</a>
+                                    <a class="nav-link @(currentController == "StateMaster" && currentAction == "IndexStateMaster" ? "active" : "")" asp-controller="StateMaster" asp-action="IndexStateMaster">State Master</a>
                                 </li>
-
                             </ul>
+
+                            @*<ul class="nav nav-treeview">
+
+                            <li class="nav-item">
+                            <a class="nav-link " asp-controller="RoleMaster" asp-action="IndexRoleMaster">Role Master</a>
+                            </li>
+
+                            <li class="nav-item">
+                            <a class="nav-link " asp-controller="CategoryMaster" asp-action="IndexCategoryMaster">Category Master</a>
+                            </li>
+
+                            <li class="nav-item">
+                            <a class="nav-link " asp-controller="CountryMaster" asp-action="IndexCountryMaster">Country Master</a>
+                            </li>
+
+                            <li class="nav-item">
+                            <a class="nav-link " asp-controller="StateMaster" asp-action="IndexStateMaster">State Master</a>
+                            </li>
+
+                            </ul>*@
                         </li>
 
                     </ul>
@@ -135,6 +149,7 @@
             </div>
             <!-- /.sidebar -->
         </aside>
+
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
@@ -176,11 +191,16 @@
             $(".nav-link").each(function () {
                 if (currentPageUrl.indexOf($(this).attr("href")) !== -1) {
                     $(this).addClass("active");
+
+                    // If the link is in a nested menu, mark its parent menu item as active
                     $(this).closest(".nav-treeview").prev(".nav-link").addClass("active");
+
+                    // Open the parent menu if it's in a collapsible menu
                     $(this).closest(".nav-treeview").parent().addClass("menu-open");
                 }
             });
         });
+
 
     </script>
 
